--- a/app/index.html
+++ b/app/index.html
@@ -6,14 +6,43 @@
   <title></title>
   <!--build:css css/styles.min.css-->
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/print.css">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital@0;1&display=swap" rel="stylesheet">
   <!--endbuild-->
 </head>
 
 <body>
-  This is a gulp starter!
+  <div class=l-frame>
+    <div class="header">
+      <ul class="menu">
+        <li class="logo">
+          <img class="logo" src="images/annabel_logo.png">
+        </li>
+        <li><a href="#price">Price</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#schedule">Schedule</a></li>
+      </ul>
+    </div>
+    
+    <section class="hero">
+      <img class="full_image" src="images/annabel_img_01.jpg">
+    </section>
+
+    <section id="price">
+      Price
+    </section>
+
+    <section id="schedule">
+      schedule
+    </section>
+
+    <section id="contact">
+      contact
+    </section>
+
+    
+  </div>  
   
-  <img class="styles" src="images/photo.jpg">
+  
   <!--build:js js/main.min.js -->
   <script src="js/lib/a-library.js"></script>
   <script src="js/lib/another-library.js"></script>
