--- a/app/index.html
+++ b/app/index.html
@@ -6,23 +6,24 @@
   <title></title>
   <!--build:css css/styles.min.css-->
   <link rel="stylesheet" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital@0;1&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
   <!--endbuild-->
 </head>
 
 <body>
   <div class=l-frame>
     <div class="header">
-      <ul class="menu">
-        <li class="logo">
-          <img class="logo" src="images/annabel_logo.png">
-        </li>
-        <li><a href="#price">Price</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#schedule">Schedule</a></li>
-      </ul>
+
+      <div class="logo">
+        <img src="images/annabel_logo.png">
+      </div>
+      <div class="menu_item"><a href="#price">Price</a></div>
+      <div class="menu_item"><a href="#contact">Contact</a></div>
+      <div class="menu_item"><a href="#schedule">Schedule</a></div>
+      <div class="menu_item"><a href="#schedule">Access</a></div>
+
     </div>
-    
+
     <section class="hero">
       <img class="full_image" src="images/annabel_img_01.jpg">
     </section>
@@ -39,10 +40,10 @@
       contact
     </section>
 
-    
-  </div>  
-  
-  
+
+  </div>
+
+
   <!--build:js js/main.min.js -->
   <script src="js/lib/a-library.js"></script>
   <script src="js/lib/another-library.js"></script>
