fix mobile font

--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,7 @@
 
           <div class="is-row space-between">
             <p>ヘアセット</p>
-            <p>¥5.500 〜</p>
+            <p>¥5.500</p>
           </div>
 
         </div>
@@ -99,15 +99,15 @@
             <p>+ ¥2.750 〜</p>
           </div>
           <div class="is-row space-between has-line">
-            <p>リタッチカラー <span class="small_font">※2</span></p>
+            <p>リタッチカラー <span class="small_font">※3</span></p>
             <p>+ ¥5.500  〜</p>
           </div>
           <div class="is-row space-between has-line">
-            <p>ダブルカラー <span class="small_font">※3</span></p>
+            <p>ダブルカラー <span class="small_font">※4</span></p>
             <p>+ ¥16.500  〜</p>
           </div>
           <div class="is-row space-between">
-            <p>ハイライト/バレイヤージュ  <span class="small_font">※3</span></p>
+            <p>ハイライト/バレイヤージュ  <span class="small_font">※4</span></p>
             <p>+ ¥18.700  〜</p>
           </div>
         </div>
@@ -150,8 +150,9 @@
             <li class="middle_font">※ 全て税込み価格になります。</li>
 
             <li> <span class="is-red">※1.</span> 単品メニューは、全て2200のシャンプーブロー料金を別途頂戴いたします。</li>
-            <li> <span class="is-red">※2.</span>（ご来店より3週間以内の施術となり、 一回の施術につき一回のリペア対応となります。 顔周りとトップの分け目のみ</li>
-            <li> <span class="is-red">※3.</span> ダメージレス付</li>
+            <li> <span class="is-red">※2.</span>ご来店より3週間以内の施術となり、 一回の施術につき一回のリペア対応となります。 顔周りとトップの分け目のみ</li>
+            <li> <span class="is-red">※3.</span>ご来店より1ヶ月以内の施術となり、それ以降は6600〜になります。</li>
+            <li> <span class="is-red">※4.</span> ダメージレス付</li>
           </ul>
         </div>
       </div>
