fix html font size

--- a/app/index.html
+++ b/app/index.html
@@ -17,8 +17,8 @@
       <div class="logo">
         <img src="images/annabel_logo.png">
       </div>
-      <div class="menu_item"><a href="#price">Price</a></div>
       <div class="menu_item"><a href="#aboutme">About me</a></div>
+      <div class="menu_item"><a href="#price">Price</a></div>
       <div class="menu_item"><a href="#instagram">Instagram</a></div>
       <!-- <div class="menu_item"><a href="#schedule">Schedule</a></div> -->
       <div class="menu_item"><a href="#access">Access</a></div>
@@ -36,7 +36,6 @@
           <img class="profile_pic" src="images/profile.jpeg">
           <div class="infos">
             <p>
-              触れたくなる質感。<br>
               色っぽ大人可愛いヘアのSpecialist
               有名店でキャリアをスタートさせ、
               その後海外に渡り、
@@ -46,8 +45,10 @@
               『おしゃれなオトナの抜け感hair』を実現します
               ☆少しやり方を変えるだけで印象は全然違います！
               どうしたら、可愛く見えるのか、丁寧にお伝えします。
+              <br>
+              スタイリスト歴: &nbsp;&nbsp;  14年
             </p>
-            <div class="info"><strong> スタイリスト歴: </strong> &nbsp;&nbsp;  14年</div>
+            <div class="info"></div>
 
             <a class="line_btn" href="https://lin.ee/dH6mjLC">
               <img class="line_logo" src="images/line_logo.png">
@@ -182,10 +183,15 @@
         <div class="address_cont is-row align-start">
           <div class="address">
             <p>〒604-0925 京都府 京都市 中京区 <br> 上本能寺前町485 モーリスビル2F</p>
-            <p class="middle_font">(地下鉄東西線 市役所前駅 Zest御池 11番出口すぐ)</p>
-            <p>TEL:075-211-6746</p>
+            <p class="middle_font">地下鉄東西線 市役所前駅 Zest御池 11番出口すぐ</p>
+            <a class="telephone" href="tel:075-211-6746">TEL:075-211-6746</a>
             <p>定休日:毎週月曜日</p>
+            <a class="line_btn" href="https://lin.ee/dH6mjLC">
+              <img class="line_logo" src="images/line_logo.png">
+              <p>Line予約</p>
+            </a>
           </div>
+
 
           <iframe class="iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3267.8149044801526!2d135.76483421483175!3d35.011338274026116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6001088def05697d%3A0x91e45e40a2703a4!2z44OZ44Or44OI44O844OB44Kr!5e0!3m2!1sja!2sjp!4v1451203142983" width="380" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 
