--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
-
+  <!--build:css css/styles.min.css-->
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400&display=swap" rel="stylesheet">
-
+  <!--endbuild-->
 </head>
 
 <body>
@@ -20,7 +20,6 @@
       <div class="menu_item"><a href="#aboutme">About me</a></div>
       <div class="menu_item"><a href="#price">Price</a></div>
       <div class="menu_item"><a href="#instagram">Instagram</a></div>
-      <!-- <div class="menu_item"><a href="#schedule">Schedule</a></div> -->
       <div class="menu_item"><a href="#access">Access</a></div>
 
     </div>
@@ -168,7 +167,7 @@
     <section id="instagram">
       <div class="is-column is-center">
         <h1 class="big_title blue">Instagram</h1>
-        <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="https://cdn.lightwidget.com/widgets/e97430fa37bc54348f6ac296165689d1.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
+        <iframe src="https://cdn.lightwidget.com/widgets/e97430fa37bc54348f6ac296165689d1.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
         </div>
       </section>
 
@@ -199,7 +198,7 @@
     <section>
   </div>
 
-
+  <script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script>
 </body>
 
 </html>
