insta txt change

--- a/app/index.html
+++ b/app/index.html
@@ -179,10 +179,10 @@
 
     <section id="instagram">
       <div class="is-column">
-        <h1 class="big_title blue">Instagram</h1>
+        <h1 class="big_title blue">Style Gallery</h1>
         <iframe src="https://cdn.lightwidget.com/widgets/e97430fa37bc54348f6ac296165689d1.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
           <div class="instagram_txt">
-            ( ◠‿◠ )☝　写真にクリックすれば、Instagramで他も見れます。
+            ( ◠‿◠ )☝　クリックすれば、Instagramで他の写真も見れます。
           </div>
         </div>
       </section>
