--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
       <div class="menu_item"><a href="#aboutme">About me</a></div>
       <div class="menu_item"><a href="#price">Price</a></div>
       <div class="menu_item"><a href="#instagram">Instagram</a></div>
+      <div class="menu_item"><a href="#schedule">Schedule</a></div>
       <div class="menu_item"><a href="#access">Access</a></div>
 
     </div>
@@ -48,28 +49,30 @@
         <div class="aboutme_cont">
           <img class="profile_pic" src="images/profile.jpg">
           <div class="infos">
+            <p class="name_j">本田　歩</p>
+            <p class="name_e">Honda　Ayumi</p>
+
             <p>
-              京都有名美容室16年勤務後、独立。
+              有名サロン11年勤務後、海外へ。
               <br>
-              色っぽ大人可愛いヘアのSpecialist
-              有名店でキャリアをスタートさせ、
-              その後海外に渡り、
-              更に技術とセンスを磨いてきました。
+              更に技術とセンスを磨き、帰国後は京都人気サロン4年勤務後、2020年フリーランスとして独立。
               <br>
-              <br>
-              ☆ お客様に柔らかい質感と
-              前髪を含めた顔周りのデザインで
-              『おしゃれなオトナの抜け感hair』を実現します。
-              <br>
-              ☆ 少しやり方を変えるだけで印象は全然違います！
-              どうしたら、可愛く見えるのか、丁寧にお伝えします。
+              女性の個々の魅力を引き出す抜け感のあるスタイルを得意とする。
+              圧倒的な技術力と似合わせ、そして再現性の高さでリピート率90%超え。
             </p>
             <div class="info"></div>
+            <div class="icons_cont">
 
-            <a class="line_btn" href="https://lin.ee/dH6mjLC">
-              <img class="line_logo" src="images/line_logo.png">
-              <p class="line_btn_txt">Lineで簡単予約</p>
-            </a>
+              <a class="line_btn" href="https://lin.ee/dH6mjLC">
+                <img class="line_logo" src="images/line_logo.png">
+                <p class="line_btn_txt">Lineで簡単予約</p>
+              </a>
+
+              <a href="https://www.instagram.com/ayumi_hairstylist/" target="_blank">
+                <img class="insta_logo" src="images/instagram.png">
+              </a>
+
+            </div>
           </div>
         </div>
 
@@ -182,11 +185,22 @@
       <div class="is-column">
         <h1 class="big_title blue">Style Gallery</h1>
         <iframe src="https://cdn.lightwidget.com/widgets/e97430fa37bc54348f6ac296165689d1.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
-          <div class="instagram_txt">
-            ( ◠‿◠ )☝　クリックすれば、Instagramで他の写真も見れます。
+          <div class="comment_txt">
+            ( ◠‿◠ )☝　クリックすれば、Instagramで他の写真も見れるよ。
           </div>
         </div>
       </section>
+
+    <section id="schedule">
+      <div class="is-column">
+          <h1 class="big_title blue">Schedule</h1>
+          <iframe class="calendar_iframe" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=2&amp;bgcolor=%23c561ac&amp;ctz=Asia%2FTokyo&amp;src=dGdpZXF1ZG9uMzFyaGtidjFxN3Nlbm5iNmNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%238E24AA&amp;showTitle=0&amp;showDate=1&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=WEEK" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+          <div class="comment_txt">
+            ( ◠‿◠ )☝　ラインの予約時に参考にしてくださいね。
+          </div>
+
+      </div>
+    </section>
 
     <section id="access">
       <div class="is-center is-column">
@@ -202,11 +216,19 @@
 
             </div>
             <a class="telephone" href="tel:075-211-6746">TEL: 075-211-6746</a>
-            <p>定休日: 毎週 月曜日</p>
-            <a class="line_btn" href="https://lin.ee/dH6mjLC">
-              <img class="line_logo" src="images/line_logo.png">
-              <p class="line_btn_txt">Lineで簡単予約</p>
-            </a>
+            <p>営業時間：10:00 ~ 20:00</p>
+            <div class="icons_cont">
+
+              <a class="line_btn" href="https://lin.ee/dH6mjLC">
+                <img class="line_logo" src="images/line_logo.png">
+                <p class="line_btn_txt">Lineで簡単予約</p>
+              </a>
+
+              <a href="#">
+                <img class="insta_logo" src="images/instagram.png">
+              </a>
+            </div>
+
           </div>
 
           <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3267.8149044801526!2d135.76483421483175!3d35.011338274026116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6001088def05697d%3A0x91e45e40a2703a4!2z44OZ44Or44OI44O844OB44Kr!5e0!3m2!1sja!2sjp!4v1451203142983" width="380" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
