--- a/app/index.html
+++ b/app/index.html
@@ -194,9 +194,11 @@
     <section id="schedule">
       <div class="is-column">
           <h1 class="big_title blue">Schedule</h1>
-          <iframe class="calendar_iframe" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=2&amp;bgcolor=%23c561ac&amp;ctz=Asia%2FTokyo&amp;src=dGdpZXF1ZG9uMzFyaGtidjFxN3Nlbm5iNmNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%238E24AA&amp;showTitle=0&amp;showDate=1&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=WEEK" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+          <iframe class="calendar_iframe" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=2&amp;bgcolor=%23c561ac&amp;ctz=Asia%2FTokyo&amp;src=dGdpZXF1ZG9uMzFyaGtidjFxN3Nlbm5iNmNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%238E24AA&amp;showTitle=0&amp;showNav=1&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=WEEK" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+
+
           <div class="comment_txt">
-            ( ◠‿◠ )☝　ラインの予約時に参考にしてくださいね。
+            ( ◠‿◠ )☝　ラインの予約時に参考にしてくださいね。携帯の画面を横にすると見やすくなります。
           </div>
 
       </div>
