change calendar txt

--- a/app/index.html
+++ b/app/index.html
@@ -198,7 +198,7 @@
 
 
           <div class="comment_txt">
-            ( ◠‿◠ )☝　ラインの予約時に参考にしてくださいね。携帯の画面を横にすると見やすくなります。
+            ( ◠‿◠ )☝　ラインの予約時に参考にしてくださいね。
           </div>
 
       </div>
