--- a/app/index.html
+++ b/app/index.html
@@ -194,12 +194,15 @@
     <section id="schedule">
       <div class="is-column">
           <h1 class="big_title blue">Schedule</h1>
+          <p>営業時間：10:00 ~ 20:00</p>
           <iframe class="calendar_iframe" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;ctz=Asia%2FTokyo&amp;src=dGdpZXF1ZG9uMzFyaGtidjFxN3Nlbm5iNmNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%238E24AA&amp;mode=WEEK&amp;showTz=0&amp;showCalendars=0&amp;showTabs=0&amp;showPrint=0&amp;showDate=1&amp;showNav=1&amp;showTitle=0" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
 
           <div class="comment_txt">
             ( ◠‿◠ )☝　ラインの予約時に参考にしてくださいね。
           </div>
+          <br>
+
 
       </div>
     </section>
