fix calendar txt and instagram link

--- a/app/index.html
+++ b/app/index.html
@@ -28,11 +28,11 @@
       <div class="logo">
         <img src="images/annabel_logo.png">
       </div>
-      <div class="menu_item"><a href="#aboutme">About me</a></div>
-      <div class="menu_item"><a href="#price">Price</a></div>
-      <div class="menu_item"><a href="#instagram">Instagram</a></div>
-      <div class="menu_item"><a href="#schedule">Schedule</a></div>
-      <div class="menu_item"><a href="#access">Access</a></div>
+      <div class="menu_item"><a href="#aboutme">ABOUT ME</a></div>
+      <div class="menu_item"><a href="#price">PRICE</a></div>
+      <div class="menu_item"><a href="#instagram">STYLE GALLERY</a></div>
+      <div class="menu_item"><a href="#schedule">SCHEDULE</a></div>
+      <div class="menu_item"><a href="#access">ACCESS</a></div>
 
     </div>
 
@@ -194,7 +194,7 @@
     <section id="schedule">
       <div class="is-column">
           <h1 class="big_title blue">Schedule</h1>
-          <p>営業時間：10:00 ~ 20:00</p>
+          <p class="calendar_txt">営業時間: 10時 〜 20時 </p>
           <iframe class="calendar_iframe" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;ctz=Asia%2FTokyo&amp;src=dGdpZXF1ZG9uMzFyaGtidjFxN3Nlbm5iNmNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%238E24AA&amp;mode=WEEK&amp;showTz=0&amp;showCalendars=0&amp;showTabs=0&amp;showPrint=0&amp;showDate=1&amp;showNav=1&amp;showTitle=0" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
 
@@ -221,7 +221,7 @@
 
             </div>
             <a class="telephone" href="tel:075-211-6746">TEL: 075-211-6746</a>
-            <p>営業時間：10:00 ~ 20:00</p>
+            <p>営業時間: 10時 〜 20時</p>
             <div class="icons_cont">
 
               <a class="line_btn" href="https://lin.ee/dH6mjLC">
@@ -229,7 +229,7 @@
                 <p class="line_btn_txt">Lineで簡単予約</p>
               </a>
 
-              <a href="#">
+              <a href="https://www.instagram.com/ayumi_hairstylist/" target="_blank">
                 <img class="insta_logo" src="images/instagram.png">
               </a>
             </div>
