add og_image and site map

--- a/app/index.html
+++ b/app/index.html
@@ -12,11 +12,30 @@
     gtag('config', 'UA-178464951-1');
   </script>
 
+  <!--  Essential META Tags -->
 
+  <meta property="og:title" content="Ayumi Hairstyle Website">
+  <meta property="og:description" content="Ayumi has started a new career at Annabel Kyoto Salon">
+  <meta property="og:image" content="https://ayumi.com/images/og_image.jpg">
+  <meta property="og:url" content="https://ayumi-hair.com">
+  <meta name="twitter:card" content="summary_large_image">
+
+
+  <!--  Non-Essential, But Recommended -->
+
+  <meta property="og:site_name" content="European Travel, Inc.">
+  <meta name="twitter:image:alt" content="Alt text for image">
+
+
+  <!--  Non-Essential, But Required for Analytics -->
+
+  <meta property="fb:app_id" content="your_app_id" />
+  <meta name="twitter:site" content="@website-username">
   <meta charset="UTF-8">
   <title></title>
   <!--build:css css/styles.min.css-->
   <link rel="stylesheet" href="css/styles.css">
+  <% @og_image = "#{@page_path}/og_image.jpg" %>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400&display=swap" rel="stylesheet">
   <!--endbuild-->
 </head>
@@ -195,7 +214,7 @@
       <div class="is-column">
           <h1 class="big_title small">Schedule</h1>
           <p class="calendar_txt">   営業時間: 10時 〜 20時, <br> 2ヶ月先のご予約まで可能です。</p>
-          <iframe class="calendar_iframe" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;ctz=Asia%2FTokyo&amp;src=dGdpZXF1ZG9uMzFyaGtidjFxN3Nlbm5iNmNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%238E24AA&amp;mode=WEEK&amp;showTz=0&amp;showCalendars=0&amp;showTabs=0&amp;showPrint=0&amp;showDate=1&amp;showNav=1&amp;showTitle=0" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+          <iframe class="calendar_iframe" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;ctz=Asia%2FTokyo&amp;src=dGdpZXF1ZG9uMzFyaGtidjFxN3Nlbm5iNmNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23D81B60&amp;showTz=0&amp;showCalendars=0&amp;showTabs=0&amp;showPrint=0&amp;showDate=1&amp;showTitle=0&amp;mode=WEEK" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
 
           <div class="comment_txt">
