add viewport metadata

--- a/app/index.html
+++ b/app/index.html
@@ -13,14 +13,14 @@
   </script>
 
   <!--  Essential META Tags -->
-
+  <meta id="viewport" name="viewport" content="width=device-width,initial-scale=1" />
   <meta property="og:title" content="Ayumi Hairstyle Website">
   <meta property="og:description" content="Ayumi has started a new career at Annabel Kyoto Salon">
   <meta property="og:image" content="https://ayumi.com/images/og_image.jpg">
   <meta property="og:url" content="https://ayumi.com/images/og_image.jpg">
   <meta name="twitter:card" content="summary_large_image">
-
-
+  <link rel="apple-touch-icon" sizes="180x180" href="https://ayumi.com/images/iphone_icon.png">
+  <link rel="icon" type="image/png" href="https://ayumi.com/images/favicon.png">
   <!--  Non-Essential, But Recommended -->
 
   <meta property="og:site_name" content="European Travel, Inc.">
@@ -35,7 +35,6 @@
   <title></title>
   <!--build:css css/styles.min.css-->
   <link rel="stylesheet" href="css/styles.css">
-  <% @og_image = "#{@page_path}/og_image.jpg" %>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400&display=swap" rel="stylesheet">
   <!--endbuild-->
 </head>
@@ -88,7 +87,7 @@
               </a>
 
               <a href="https://www.instagram.com/ayumi_hairstylist/" target="_blank">
-                <img class="insta_logo" src="images/instagram.png">
+                <img class="insta_logo" src="images/instagram.svg">
               </a>
 
             </div>
@@ -249,7 +248,7 @@
               </a>
 
               <a href="https://www.instagram.com/ayumi_hairstylist/" target="_blank">
-                <img class="insta_logo" src="images/instagram.png">
+                <img class="insta_logo" src="images/instagram.svg">
               </a>
             </div>
 
