--- a/app/index.html
+++ b/app/index.html
@@ -213,7 +213,7 @@
       <div class="is-column">
           <h1 class="big_title small">Schedule</h1>
           <p class="calendar_txt">   営業時間: 10時 〜 20時, <br> 2ヶ月先のご予約まで可能です。</p>
-          <iframe class="calendar_iframe" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;ctz=Asia%2FTokyo&amp;src=dGdpZXF1ZG9uMzFyaGtidjFxN3Nlbm5iNmNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23D81B60&amp;showTz=0&amp;showCalendars=0&amp;showTabs=0&amp;showPrint=0&amp;showDate=1&amp;showTitle=0&amp;mode=WEEK" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+          <iframe class="calendar_iframe" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;ctz=Asia%2FTokyo&amp;src=dGdpZXF1ZG9uMzFyaGtidjFxN3Nlbm5iNmNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23D81B60&amp;showTz=0&amp;showCalendars=0&amp;showTabs=0&amp;showPrint=0&amp;showDate=1&amp;showTitle=0&amp;mode=WEEK" style="border-width:0" width="381" height="600" frameborder="0" scrolling="no"></iframe>
 
 
           <div class="comment_txt">
@@ -235,7 +235,7 @@
               <div class="subway_logo">
                 <img src="images/subway.png">
               </div>
-              <p class="middle_font">(地下鉄東西線 市役所前駅 <br> Zest御池 11番出口すぐです。)</p>
+              <p class="middle_font">地下鉄東西線 市役所前駅 <br> Zest御池 11番出口すぐです</p>
 
             </div>
             <a class="telephone" href="tel:075-211-6746">TEL: 075-211-6746</a>
