--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,9 @@
 
   <title>Ayumi Hair</title>
   <!--  Essential META Tags -->
+  <meta name="description" content="Ayumi starts a new career at Kyoto Salon called Annabel-Yard">
+  <link rel="canonical" href="https://ayumi-hair.com" />
+  <meta name=”robots” content=”index, follow”>
   <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
   <meta property="og:title" content="Ayumi Hairstyle - Kyoto">
   <meta property="og:description" content="Ayumi starts a new career at Kyoto Salon called Annabel-Yard">
@@ -45,7 +48,7 @@
     <div class="header">
 
       <div class="logo">
-        <img src="images/annabel_logo.png">
+        <img src="images/annabel_logo.png" alt=”annabel_logo”>
       </div>
       <div class="menu_item"><a href="#aboutme">ABOUT ME</a></div>
       <div class="menu_item"><a href="#price">PRICE</a></div>
@@ -57,7 +60,7 @@
 
     <div class="is-row">
       <section class="hero">
-        <img class="full_image" src="images/annabel_img_01.jpg">
+        <img class="full_image" src="images/annabel_img_01.jpg" alt=”hero_image”>
       </section>
 
 
@@ -66,7 +69,7 @@
       <div class="is-column is-center">
         <h1 class="big_title blue">About me</h1>
         <div class="aboutme_cont">
-          <img class="profile_pic" src="images/profile.jpg">
+          <img class="profile_pic" src="images/profile.jpg" alt=”profile_image”>
           <div class="infos">
             <p class="name_j">本田　歩</p>
             <p class="name_e">Honda　Ayumi</p>
@@ -83,12 +86,12 @@
             <div class="icons_cont">
 
               <a class="line_btn" href="https://lin.ee/dH6mjLC">
-                <img class="line_logo" src="images/line_logo.png">
+                <img class="line_logo" src="images/line_logo.png" alt=”line_logo”>
                 <p class="line_btn_txt">Lineで簡単予約</p>
               </a>
 
               <a href="https://www.instagram.com/ayumi_hairstylist/" target="_blank">
-                <img class="insta_logo" src="images/instagram.svg">
+                <img class="insta_logo" src="images/instagram.svg" alt=”instagram_logo”>
               </a>
 
             </div>
@@ -234,7 +237,7 @@
             <p>〒604-0925 京都府 京都市 中京区 <br> 上本能寺前町485 モーリスビル2F</p>
             <div class="is-row">
               <div class="subway_logo">
-                <img src="images/subway.png">
+                <img src="images/subway.png" alt=”subway_icon”>
               </div>
               <p class="middle_font">地下鉄東西線 市役所前駅 <br> Zest御池 11番出口すぐです</p>
 
@@ -244,12 +247,12 @@
             <div class="icons_cont">
 
               <a class="line_btn" href="https://lin.ee/dH6mjLC">
-                <img class="line_logo" src="images/line_logo.png">
+                <img class="line_logo" src="images/line_logo.png" alt=”line_logo”>
                 <p class="line_btn_txt">Lineで簡単予約</p>
               </a>
 
               <a href="https://www.instagram.com/ayumi_hairstylist/" target="_blank">
-                <img class="insta_logo" src="images/instagram.svg">
+                <img class="insta_logo" src="images/instagram.svg" alt=”instagram_logo”>
               </a>
             </div>
 
