--- a/app/index.html
+++ b/app/index.html
@@ -234,12 +234,12 @@
         <h1 class="big_title small">Access</h1>
         <div class="address_cont is-row align-start">
           <div class="address">
-            <p>〒604-0925 京都府 京都市 中京区 <br> 上本能寺前町485 モーリスビル2F</p>
-            <div class="is-row">
+            <p>〒604-0925 京都府 京都市 中京区 上本能寺前町485 モーリスビル2F</p>
+            <div class="is-row is-gray">
               <div class="subway_logo">
                 <img src="images/subway.png" alt=”subway_icon”>
               </div>
-              <p class="middle_font">地下鉄東西線 市役所前駅 <br> Zest御池 11番出口すぐです</p>
+              <p class="middle_font">地下鉄東西線 市役所前駅 Zest御池 <br> 11番出口すぐです。</p>
 
             </div>
             <a class="telephone" href="tel:075-211-6746">TEL: 075-211-6746</a>
