--- a/app/index.html
+++ b/app/index.html
@@ -235,15 +235,15 @@
         <div class="address_cont is-row align-start">
           <div class="address">
             <p>〒604-0925 京都府 京都市 中京区 上本能寺前町485 モーリスビル2F</p>
-            <div class="is-row is-gray">
+            <div class="is-row station_info_cont">
               <div class="subway_logo">
                 <img src="images/subway.png" alt=”subway_icon”>
               </div>
-              <p class="middle_font">地下鉄東西線 市役所前駅 Zest御池 <br> 11番出口すぐです。</p>
+              <p class="station_info">地下鉄 東西線 市役所前駅 Zest 御池 11番出口からすぐです。</p>
 
             </div>
             <a class="telephone" href="tel:075-211-6746">TEL: 075-211-6746</a>
-            <p>営業時間: 10時 〜 20時</p>
+            <p>営業時間: 10時 〜 20時, <br> 2ヶ月先のご予約まで可能です。</p>
             <div class="icons_cont">
 
               <a class="line_btn" href="https://lin.ee/dH6mjLC">
