add more fx to txt

--- a/app/index.html
+++ b/app/index.html
@@ -227,7 +227,7 @@
           <iframe class="calendar_iframe" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;ctz=Asia%2FTokyo&amp;src=dGdpZXF1ZG9uMzFyaGtidjFxN3Nlbm5iNmNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23D81B60&amp;hl=en&amp;showTz=0&amp;showCalendars=0&amp;showTabs=0&amp;showPrint=0&amp;showTitle=0&amp;showNav=1&amp;mode=WEEK" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
           <div class="comment_txt">
-            ( ◠‿◠ )☝タッチ出来ませんが、<br>  ラインの予約時に参考にしてください。
+            ☝( ◠‿◠ )☝タッチ出来ませんが、<br>  <span class="is-red">ラインの予約時に参考</span> にしてください。
           </div>
       </div>
     </section>
