--- a/app/index.html
+++ b/app/index.html
@@ -92,7 +92,7 @@
             <div class="info"></div>
             <div class="icons_cont">
 
-            <a class="reservation_btn" href="http://www.airrsv.net/ayumi-hair/calendar">
+            <a class="reservation_btn" href="http://airrsv.net/ayumi-hair/calendar">
                 オンライン予約
             </a>
 
