change some minor layout

--- a/app/index.html
+++ b/app/index.html
@@ -77,7 +77,6 @@
           <img class="profile_pic" src="images/profile.jpg" alt=”profile_image”>
           <div class="infos">
             <p class="name_j">本田　歩</p>
-            <p class="name_e">Honda　Ayumi</p>
 
             <p>
               老舗有名サロン11年勤務後、カナダへ。
@@ -266,11 +265,11 @@
         <h1 class="big_title small">Access</h1>
         <div class="address_cont is-row align-start">
           <div class="address">
-            <p>京都市中京区上本能寺前町485 <br>
+            <p class="address_txt">京都市 中京区 上本能 寺前町485 <br>
               モーリスビル2F</p>
 
             <p class="station_info">
-              地下鉄 京都市役所前駅 11番出口徒歩1分。
+              地下鉄 京都市役所前駅　11番出口徒歩1分。
             </p>
 
             <p>定休日: Mon & Tue</p>
@@ -287,7 +286,7 @@
     </section>
 
     <section class="footer">
-      ©Annabel All rights reserved.
+      ©2021 by Annabel
     <section>
   </div>
 
