update website price 2022

--- a/app/index.html
+++ b/app/index.html
@@ -100,7 +100,26 @@
             </a>
             </div>
 
-            <div class="line_msg">*ご予約以外のお問い合わせはLineをご利用下さい。</div>
+            <div class="header_msg">*ご予約以外のお問い合わせはLineをご利用下さい。</div>
+
+            <div class="header_msg red_small">
+              ご連絡なしの無断キャンセルは、次回ご来店の際にキャンセル
+              されたご予約金額の30%をキャンセル料として頂戴いたします。
+              <br>
+              次回のご来店時に施術料と合わせてお支払いをお願い致します。
+              <br>
+              <br>
+              ご連絡を頂かずに15分以上遅れてご来店された場合は無断キャンセルと判断させて頂き当日の別時間にご変更の場合にも
+              <br>
+              キャンセル料としてご予約金額の30%を頂戴いたします。
+              <br>
+              <br>
+              キャンセル料をお支払頂けない場合は施術をお断りさせて頂きます。
+
+            </div>
+
+
+
           </div>
         </div>
 
@@ -123,8 +142,8 @@
           <h2 class="subtitle">Cut <span class="japaneseTitle"></span></h2>
 
           <div class="is-row space-between has-line">
-            <p>カット <small>(シャンプー・ブロー込み) </small></p>
-            <p>¥6.600</p>
+            <p>カット <small class="red">( 当店で施術後 6週間以内・10%Off )*</small></p>
+            <p>¥7.700</p>
           </div>
 
           <div class="is-row space-between has-line">
@@ -132,44 +151,42 @@
             <p>¥1.650</p>
           </div>
 
-
-
           <div class="is-row space-between has-line">
-            <p>小学生カット <small>(シャンプー・ブロー込み) </small></p>
-            <p>¥3.850</p>
-          </div>
-
-          <div class="is-row space-between has-line">
-            <p>中学生カット <small>(シャンプー・ブロー込み) </small></p>
-            <p>¥4.950</p>
+            <p>顔周りカット</p>
+            <p>¥2.200</p>
           </div>
 
         </div>
 
         <div class="service is-column">
-          <h2 class="subtitle">Color </h2>
+          <h2 class="subtitle">Color *</h2>
           <div class="is-row space-between has-line">
-            <p>リタッチカラー <small>(当店で施術後 １ヶ月以内)</small></p>
-            <p>¥5.500　</p>
+            <p>リタッチカラー <small>( 当店で施術後 4週間以内 )</small></p>
+            <p>¥6.050　</p>
           </div>
 
           <div class="is-row space-between has-line">
             <p>カラー</p>
-            <p>¥6.600 〜</p>
+            <p>¥7.150 〜</p>
           </div>
           <div class="is-row space-between has-line">
-            <p>ダメージレスカラー</p>
+            <p>ケアカラー</p>
             <p>¥8.800 〜</p>
           </div>
 
           <div class="is-row space-between has-line">
-            <p>ダメージレスブリーチ + カラー</p>
-            <p>¥16.500 〜</p>
+            <p>プレミアムカラー　<small>(ケアカラー + トリートメント)</small></p>
+            <p>¥12.100 〜</p>
           </div>
 
           <div class="is-row space-between has-line">
-            <p>ダメージレスハイライト + カラー</p>
-            <p>¥19.250 〜</p>
+            <p>ケアブリーチ + カラー</p>
+            <p>¥17.050 〜</p>
+          </div>
+
+          <div class="is-row space-between has-line">
+            <p>ケアブリーチ・ハイライト + カラー</p>
+            <p>¥19.800 〜</p>
           </div>
 
         </div>
@@ -179,10 +196,10 @@
       <div class="price_cont last-row align-baseline">
 
         <div class="service is-column">
-          <h2 class="subtitle">Perm</h2>
+          <h2 class="subtitle">Perm*</h2>
           <div class="is-row space-between has-line">
             <p>パーマ</p>
-            <p>¥8.800 〜</p>
+            <p>¥9.350 〜</p>
           </div>
           <div class="is-row space-between has-line">
             <p>前髪パーマ</p>
@@ -198,7 +215,7 @@
           </div>
           <div class="is-row space-between has-line">
             <p>ストレートパーマ</p>
-            <p>¥15.950 〜</p>
+            <p>¥16.500 〜</p>
           </div>
         </div>
 
@@ -206,12 +223,17 @@
           <h2 class="subtitle">Other</h2>
 
           <div class="is-row space-between has-line">
+            <p>ヘッドスパ</p>
+            <p>¥2.750</p>
+          </div>
+
+          <div class="is-row space-between has-line">
             <p>クイックトリートメント</p>
             <p>¥3.300</p>
           </div>
 
           <div class="is-row space-between has-line">
-            <p>髪質改善トリートメント</p>
+            <p>集中ケアトリートメント</p>
             <p>¥4.950</p>
           </div>
 
@@ -220,10 +242,6 @@
             <p>¥5.500</p>
           </div>
 
-          <div class="is-row space-between has-line">
-            <p>スタイリング講座　<small>(1時間)</small></p>
-            <p>¥5.500</p>
-          </div>
 
 
         </div>
@@ -231,6 +249,11 @@
       </div>
       <div class="obs">
         *単品メニューは全て￥2.200のシャンプーブロー料金が発生致します。
+        <br>
+        *中学生以下 → 20%Off
+        <br>
+        *カラー・パーマー時（ミディアム + ¥1.100、ロング + ¥2.200）
+
       </div>
 
     </section>
