fix color line break

--- a/app/index.html
+++ b/app/index.html
@@ -175,7 +175,7 @@
           </div>
 
           <div class="is-row space-between has-line">
-            <p>プレミアムカラー　<small>(ケアカラー + トリートメント)</small></p>
+            <p>プレミアムカラー　<br><small>(ケアカラー + トリートメント)</small></p>
             <p>¥12.100 〜</p>
           </div>
 
