update color text

--- a/app/index.html
+++ b/app/index.html
@@ -170,22 +170,22 @@
             <p>¥7.150 〜</p>
           </div>
           <div class="is-row space-between has-line">
-            <p>ケアカラー</p>
+            <p>ケアカラー　<span class="lineBreak"><br></span><small>( ケアカラーのダメージを軽減 )</small></p>
             <p>¥8.800 〜</p>
           </div>
 
           <div class="is-row space-between has-line">
-            <p>プレミアムカラー　<br><small>(ケアカラー + トリートメント)</small></p>
+            <p>プレミアムカラー　<span class="lineBreak"><br></span><small>( ケアカラー + トリートメント )</small></p>
             <p>¥12.100 〜</p>
           </div>
 
           <div class="is-row space-between has-line">
             <p>ケアブリーチ + カラー</p>
-            <p>¥17.050 〜</p>
+            <p>¥17.600 〜</p>
           </div>
 
           <div class="is-row space-between has-line">
-            <p>ケアブリーチ・ハイライト + カラー</p>
+            <p>ケアブリーチハイライト + カラー</p>
             <p>¥19.800 〜</p>
           </div>
 
