--- a/app/index.html
+++ b/app/index.html
@@ -103,7 +103,9 @@
             <div class="header_msg">*ご予約以外のお問い合わせはLineをご利用下さい。</div>
 
             <div class="header_msg red_small">
-              ご連絡なしの無断キャンセルは、次回ご来店の際にキャンセルされたご予約金額の30%をキャンセル料として頂戴いたします。
+              ご連絡なしの無断キャンセルは、次回ご来店の際にキャンセルされたご予約金額の100%、
+              <br>
+              また、当日のキャンセルはご予約金額の30%をキャンセル料として頂戴いたします。
               <br>
               次回のご来店時に施術料と合わせてお支払いをお願い致します。
               <br>
@@ -134,6 +136,7 @@
     <section id="price" class="is-center is-column">
 
       <h1 class="big_title small">Price</h1>
+      <br>
 
       <div class="price_cont align-baseline">
 
@@ -251,7 +254,7 @@
         <br>
         *中学生以下のカット → 20%Off
         <br>
-        *カラー・パーマー時（ミディアム + ¥1.100、ロング + ¥2.200）
+        *カラー・パーマー時（ミディアム + ¥1.100、ロング + ¥2.200、スーパーロング + ¥3.300）
 
       </div>
 
